--- a/RosePerksTest/RosePerksTest/Base.lproj/Main.storyboard
+++ b/RosePerksTest/RosePerksTest/Base.lproj/Main.storyboard
@@ -114,6 +114,66 @@ alumniaffairs@rose-hulman.edu
             </objects>
             <point key="canvasLocation" x="417" y="152"/>
         </scene>
+        <!--Master Table View Controller-->
+        <scene sceneID="AeI-bm-OKL">
+            <objects>
+                <tableViewController id="9jm-DI-mam" customClass="RHMasterTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="YYG-kT-VvA">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PerksCell" id="Db7-a2-ZQx">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Db7-a2-ZQx" id="CW3-z4-0Su">
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="V9f-He-yCi" kind="push" id="x5Q-Q4-U8p"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="9jm-DI-mam" id="l4Q-IQ-8nb"/>
+                            <outlet property="delegate" destination="9jm-DI-mam" id="p4j-7r-zRN"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="dB0-d8-V1n"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="STg-rc-h3N" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="781" y="152"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="SNR-3K-Sri">
+            <objects>
+                <viewController id="V9f-He-yCi" customClass="RHDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0E0-U9-1U1"/>
+                        <viewControllerLayoutGuide type="bottom" id="PPo-Bo-K6w"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uon-5K-n60">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FRa-GR-N0u">
+                                <rect key="frame" x="0.0" y="20" width="320" height="480"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="PtI-jF-jsX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KGe-qw-xCg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1130" y="152"/>
+        </scene>
         <!--View Controller - Rose Perks-->
         <scene sceneID="HNT-vk-cdj">
             <objects>
@@ -142,6 +202,9 @@ alumniaffairs@rose-hulman.edu
                                 <state key="normal" title="Perks List">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="9jm-DI-mam" kind="push" id="bfg-mI-A0p"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T2l-m4-fQc">
                                 <rect key="frame" x="52" y="283" width="217" height="30"/>
