--- a/RosePerksTest/RosePerksTest/Base.lproj/Main.storyboard
+++ b/RosePerksTest/RosePerksTest/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="1r7-8q-G8I">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="1r7-8q-G8I">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--View Controller - Rose Perks-->
@@ -243,10 +243,10 @@ alumniaffairs@rose-hulman.edu
             </objects>
             <point key="canvasLocation" x="781" y="-479"/>
         </scene>
-        <!--View Controller - Category-->
+        <!--Category View Controller - Category-->
         <scene sceneID="jVs-Ru-Izf">
             <objects>
-                <viewController id="8km-yA-4Hi" sceneMemberID="viewController">
+                <viewController id="8km-yA-4Hi" customClass="RHCategoryViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="KNj-iy-LvC"/>
                         <viewControllerLayoutGuide type="bottom" id="o47-7I-DNH"/>
@@ -256,44 +256,41 @@ alumniaffairs@rose-hulman.edu
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4yf-rA-IYh">
-                                <rect key="frame" x="26" y="78" width="121" height="123"/>
+                                <rect key="frame" x="100" y="188" width="121" height="123"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" backgroundImage="129091-simple-red-square-icon-food-beverage-knife-fork2.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZCa-yX-ZH2">
-                                <rect key="frame" x="179" y="78" width="121" height="123"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" backgroundImage="129045-simple-red-square-icon-food-beverage-drink-glass5-sc48.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YRE-nb-7ln">
-                                <rect key="frame" x="26" y="193" width="121" height="123"/>
+                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" restorationIdentifier="Hotel" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YRE-nb-7ln">
+                                <rect key="frame" x="20" y="69" width="121" height="123"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" backgroundImage="129300-simple-red-square-icon-people-things-bed1-sc43.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="HotelButton:" destination="8km-yA-4Hi" eventType="touchUpInside" id="Gs4-YC-agM"/>
+                                    <segue destination="9jm-DI-mam" kind="push" id="501-p8-5Wx"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zpr-tR-QRG">
-                                <rect key="frame" x="179" y="193" width="121" height="123"/>
+                                <rect key="frame" x="179" y="69" width="121" height="123"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" backgroundImage="128579-simple-red-square-icon-business-dollar-solid.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NRW-lT-TV6">
-                                <rect key="frame" x="26" y="324" width="121" height="123"/>
+                                <rect key="frame" x="20" y="309" width="121" height="123"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" backgroundImage="128520-simple-red-square-icon-business-cart-7dots.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xHa-IO-nHF">
-                                <rect key="frame" x="179" y="324" width="121" height="123"/>
+                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9by-Eg-77o">
+                                <rect key="frame" x="179" y="309" width="121" height="123"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" backgroundImage="129867-simple-red-square-icon-symbols-shapes-comment-bubbles.png">
+                                <state key="normal" backgroundImage="category_129921_simple_red_square_icon_symbols_shapes_spinner1 (1).png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
@@ -328,13 +325,12 @@ alumniaffairs@rose-hulman.edu
     <resources>
         <image name="128520-simple-red-square-icon-business-cart-7dots.png" width="256" height="256"/>
         <image name="128579-simple-red-square-icon-business-dollar-solid.png" width="256" height="256"/>
-        <image name="129045-simple-red-square-icon-food-beverage-drink-glass5-sc48.png" width="256" height="256"/>
         <image name="129091-simple-red-square-icon-food-beverage-knife-fork2.png" width="256" height="256"/>
         <image name="129300-simple-red-square-icon-people-things-bed1-sc43.png" width="256" height="256"/>
-        <image name="129867-simple-red-square-icon-symbols-shapes-comment-bubbles.png" width="256" height="256"/>
         <image name="Official Rose-Hulman Red &amp; White.jpg" width="635" height="120"/>
         <image name="RH-AA.jpg" width="1219" height="355"/>
         <image name="background_not_complete.jpg" width="591" height="624"/>
+        <image name="category_129921_simple_red_square_icon_symbols_shapes_spinner1 (1).png" width="512" height="512"/>
         <image name="imgres.jpg" width="275" height="183"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
@@ -342,4 +338,7 @@ alumniaffairs@rose-hulman.edu
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="bfg-mI-A0p"/>
+    </inferredMetricsTieBreakers>
 </document>
